# tetris-bot

./: CMakeLists.txt  README.md
bot/: CMakeLists.txt  beam.cpp  beam.h  bitboard.h  bot.cpp  bot.h  definition.cpp  definition.h  eval.h  node.cpp  node.h  vec.h
bot/include/: beam.h  bitboard.h  bot.h  definition.h  eval.h  node.h  vec.h
bot/src/: beam.cpp  bitboard.cpp  bot.cpp  eval.cpp  node.cpp  vec.cpp
sfml-example/: Board.cpp  Board.h  Game.cpp  Game.h  Game1.cpp  Game1.h  Input.cpp  Input.h  Key.h  Piece.cpp  Piece.h  Type.h  init.json  main.cpp
tetris_sfml/: CMakeLists.txt
tetris_sfml/include/: Board.h  Game.h  Game1.h  Input.h  Key.h  Piece.h  Type.h  board.h  game.h  game1.h  game_bot.h  piece.h  type.h
tetris_sfml/src/: Key.cpp  Piece.cpp  board.cpp  game.cpp  game1.cpp  game_bot.cpp  main.cpp
